--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "cordova-android": "^6.3.0",
         "cordova-android-play-services-gradle-release": "^1.1.1",
         "cordova-browser": "^4.1.0",
-        "cordova-ios": "^4.5.2",
+        "cordova-ios": "4.5.1",
         "cordova-plugin-add-swift-support": "^1.7.0",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-console": "^1.1.0",
